--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,11 @@ header {
 }
 
 .site-contacts .link {
+	display: flex;
+    align-items: center;
+	gap: 10px;
 	color: var(--paragraph-text-color);
+	fill: currentColor;
 
 	font-weight: 500;
 	line-height: 1.14;
@@ -151,6 +155,7 @@ header {
 .address-list .link:hover,
 .address-list .link:focus {
 	color: var(--accent-color);
+	fill: currentColor;
 }
 
 /* main */
@@ -158,6 +163,20 @@ header {
 /* Hero */
 
 .hero {
+	max-width: 1600px;
+	height: 600px;
+	margin-left: auto;
+	margin-right: auto;
+	background-image: linear-gradient(
+     	 to right,
+     	 rgba(47, 48, 58, 0.4),
+     	 rgba(47, 48, 58, 0.4)
+    	), 
+		url("../images/hero-img.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+
 	padding-top: 200px;
 	padding-bottom: 200px;
 
@@ -235,6 +254,14 @@ header {
 	width: 270px;
 }
 
+.feature-item .background-svg {
+	background-color: var(--secondary-title-text-color);
+	text-align: center;
+	padding: 25px 100px;
+	margin-bottom: 30px;
+	border-radius: 4px;
+}
+
 .feature-list .feature-title {
 	margin-top: 0;
 	margin-bottom: 10px;
@@ -295,10 +322,51 @@ header {
 }
 
 .team-card .team-paragraph {
+	margin-bottom: 16px;
+
 	color: var(--paragraph-text-color);
 
 	font-size: 16px;
 	line-height: 1.19;
+}
+
+.team-card .team-network {
+	display: flex;
+	gap: 10px;
+	justify-content: center;
+}
+
+.network-item {
+	width: 44px;
+	height: 44px;
+}
+
+.network {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 50%;
+	width: 100%;
+	height: 100%;
+	fill: var(--paragraph-text-color);
+}
+
+.network:hover {
+	fill: var(--title-text-color);
+	background-color: var(--accent-color);
+}
+
+.clients-card {
+	display: flex;
+	gap: 30px;
+}
+
+.background-clients {
+	border: 1px solid #AFB1B8;
+	padding: 16px 32px;
+	border-radius: 4px;
+
+	fill: #AFB1B8;
 }
 
 /* footer */
@@ -315,6 +383,7 @@ header {
 
 .address-list {
 	margin-top: 28px;
+	margin-right: 70px;
 }
 
 .address-list .address-item + .address-item {
@@ -338,7 +407,6 @@ header {
 	font-style: normal;
 	text-decoration: none;
 }
-
 
 /* Стили portfolio.html */
 .filters {
