--- a/css/styles.css
+++ b/css/styles.css
@@ -255,8 +255,10 @@ header {
 }
 
 .feature-item .background-svg {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	background-color: var(--secondary-title-text-color);
-	text-align: center;
 	padding: 25px 100px;
 	margin-bottom: 30px;
 	border-radius: 4px;
@@ -351,7 +353,8 @@ header {
 	fill: var(--paragraph-text-color);
 }
 
-.network:hover {
+.network:hover,
+.network:focus {
 	fill: var(--title-text-color);
 	background-color: var(--accent-color);
 }
@@ -369,6 +372,12 @@ header {
 	fill: #AFB1B8;
 }
 
+.background-clients:hover,
+.background-clients:focus {
+	border: 1px solid var(--accent-color);
+	fill: var(--accent-color);
+}
+
 /* footer */
 .floor {
 	padding-top: 60px;
@@ -377,17 +386,22 @@ header {
 	background-color: var(--secondary-background-color);
 }
 
+.footer-arrangement {
+	display: flex;
+	align-items: baseline;
+}
+
 .studio-footer {
 	color: var(--title-text-color);
 }
 
 .address-list {
-	margin-top: 28px;
+	margin-top: 20px;
 	margin-right: 70px;
 }
 
 .address-list .address-item + .address-item {
-	margin-top: 12px;
+	margin-top: 9px;
 }
 
 .address-list .address-street {
@@ -406,6 +420,42 @@ header {
 
 	font-style: normal;
 	text-decoration: none;
+}
+
+.footer-title {
+	margin-bottom: 20px;
+
+	font-size: 14px;
+	line-height: 1.14;
+	text-transform: uppercase;
+
+	color: var(--title-text-color);
+}
+
+.footer-list-network {
+	display: flex;
+	gap: 10px;
+}
+
+.footer-network-item {
+	width: 44px;
+	height: 44px;
+}
+
+.footer-network {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: rgba(255, 255, 255, 0.1);
+	border-radius: 50%;
+	width: 100%;
+	height: 100%;
+	fill: var(--title-text-color)
+}
+
+.footer-network:hover,
+.footer-network:focus {
+	background-color: var(--accent-color);
 }
 
 /* Стили portfolio.html */
@@ -436,7 +486,14 @@ header {
 }
 
 .project .project-item {
-	width: 370px; 
+	width: 370px;
+}
+
+.project .project-item:hover,
+.project .project-item:focus {
+	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 
+				0px 4px 4px rgba(0, 0, 0, 0.06), 
+				1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .project .project-img {
