--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,7 @@ header {
 .site-contacts .link {
 	display: flex;
     align-items: center;
+	justify-content: center;
 	gap: 10px;
 	color: var(--paragraph-text-color);
 	fill: currentColor;
@@ -259,7 +260,7 @@ header {
 	align-items: center;
 	justify-content: center;
 	background-color: var(--secondary-title-text-color);
-	padding: 25px 100px;
+	height: 120px;
 	margin-bottom: 30px;
 	border-radius: 4px;
 }
@@ -350,7 +351,7 @@ header {
 	border-radius: 50%;
 	width: 100%;
 	height: 100%;
-	fill: var(--paragraph-text-color);
+	fill: #AFB1B8;
 }
 
 .network:hover,
@@ -364,9 +365,19 @@ header {
 	gap: 30px;
 }
 
+.clients-card .clients-card-item {
+	width: 170px;
+	height: 92px;
+}
+
 .background-clients {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	border: 1px solid #AFB1B8;
-	padding: 16px 32px;
+	width: 100%;
+	height: 100%;
+	/* padding: 16px 32px; */
 	border-radius: 4px;
 
 	fill: #AFB1B8;
