--- a/css/styles.css
+++ b/css/styles.css
@@ -164,6 +164,31 @@ header {
 /* Hero */
 
 .hero {
+	/* max-width: 1600px;
+	height: 600px;
+	margin-left: auto;
+	margin-right: auto;
+	background-image: linear-gradient(
+     	 to right,
+     	 rgba(47, 48, 58, 0.4),
+     	 rgba(47, 48, 58, 0.4)
+    	), 
+		url("../images/hero-img.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center; */
+
+	/* padding-top: 200px;
+	padding-bottom: 200px; */
+
+	background-color: var(--secondary-background-color);
+	text-align: center;
+}
+
+.thumb {
+	padding-top: 200px;
+	padding-bottom: 200px;
+
 	max-width: 1600px;
 	height: 600px;
 	margin-left: auto;
@@ -177,12 +202,6 @@ header {
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
-
-	padding-top: 200px;
-	padding-bottom: 200px;
-
-	background-color: var(--secondary-background-color);
-	text-align: center;
 }
 
 .hero-title {
